--- a/ilk_ders.ipynb
+++ b/ilk_ders.ipynb
@@ -66,16 +66,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "209b63a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Dört basamaklı sayı giriniz:\"))\n",
+    "b = int(input(\"Dört basamaklı sayı giriniz:\"))\n",
+    "c = int(input(\"Dört basamaklı sayı giriniz:\"))\n",
+    "d = int(input(\"Dört basamaklı sayı giriniz:\"))\n",
+    "toplam = str(a + b + c + d)\n",
+    "print(toplam[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c594236d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4936\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"Bir dort basamakli sayi giriniz:\"))\n",
+    "y = int(input(\"ikinci dort basamakli sayi giriniz:\"))\n",
+    "z = int(input(\"ucuncu dort basamakli sayi giriniz:\"))\n",
+    "t = int(input(\"dorduncu dort basamakli sayi giriniz:\"))\n",
+    "top = x + y + z + t\n",
+    "str(top)\n",
+    "print(top)\n",
+    "print(str(top)[-2])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c594236d",
+   "id": "fa0fa78f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -83,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +138,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b6f6a7bb10ba9d8da24679aa7c156bc8c77d63457212bc849342bf9244f013b6"
+   }
   }
  },
  "nbformat": 4,
