--- a/task_12_02_2023.ipynb
+++ b/task_12_02_2023.ipynb
@@ -114,6 +114,145 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elma armut\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elmaarmut\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\",sep=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elma armut\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\",sep=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elma*armut\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\",sep=\"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elmaarmut"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\",sep=\"\",end=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elma armut*"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\",sep=\" \",end=\"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elma armut*elma\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\",sep=\" \",end=\"*\")\n",
+    "print(\"elma\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elma armut\n",
+      "elma\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\",sep=\" \",end=\"\\n\")\n",
+    "print(\"elma\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
