--- a/task_12_02_2023.ipynb
+++ b/task_12_02_2023.ipynb
@@ -253,10 +253,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elma\n",
+      "armut\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"elma\",\"armut\",sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bugün python dersinin ikincisi.\n",
+      "Ikınci derse yine tırnakları işleyerekbaşladık\n",
+      "İnşallah bi yerde biter bu tırnak mevzusu\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"bugün python dersinin ikincisi.\\nIkınci derse yine tırnakları işleyerekbaşladık\\nİnşallah bi yerde biter bu tırnak mevzusu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bugün python dersinin ikincisi. derse yine tırnakları işleyerekbaşladıkİnşallah bi yerde biter bu tırnak mevzusu\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"bugün python dersinin ikincisi. derse yine tırnakları işleyerekbaşladıkİnşallah bi yerde biter bu tırnak mevzusu\",sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bugün python dersinin ikincisi.\n",
+      "derse yine tırnakları işleyerekbaşladık\n",
+      "İnşallah bi yerde biter bu tırnak mevzusu\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"bugün python dersinin ikincisi.\", \"derse yine tırnakları işleyerekbaşladık\",\"İnşallah bi yerde biter bu tırnak mevzusu\",sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "o"
+   ]
   }
  ],
  "metadata": {
