--- a/task_14_02_2023.ipynb
+++ b/task_14_02_2023.ipynb
@@ -273,6 +273,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BananaAppleBirneOrange\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Banana\", \"Apple\", \"Birne\", \"Orange\", sep=\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banana Apple Birne Orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Banana\", \"Apple\", \"Birne\", \"Orange\", sep=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banana*Apple*Birne*Orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Banana\", \"Apple\", \"Birne\", \"Orange\", sep=\"*\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
