--- a/task_14_02_2023.ipynb
+++ b/task_14_02_2023.ipynb
@@ -333,10 +333,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sınavdan aldığınız not D harfine denk gelmektedir\n"
+     ]
+    }
+   ],
+   "source": [
+    "sınav_notu = int(input(\"Sınav notunuzu girin.(0 ile 100 arasında)\"))\n",
+    "\n",
+    "if 0 <= sınav_notu <= 100:\n",
+    "    if sınav_notu >= 90:\n",
+    "        harf_notu = \"A\"\n",
+    "    elif sınav_notu >= 75:\n",
+    "        harf_notu = \"B\"\n",
+    "    elif sınav_notu >= 60:\n",
+    "        harf_notu = \"C\"\n",
+    "    elif sınav_notu >= 45:\n",
+    "        harf_notu = \"D\"\n",
+    "    else:\n",
+    "        harf_notu = \"F\"\n",
+    "    print(f\"sınavdan aldığınız not {harf_notu} harfine denk gelmektedir\")\n",
+    "else:\n",
+    "    print(\"hatalı giriş yaptınız\")"
+   ]
   },
   {
    "cell_type": "code",
