--- a/task_16_02_2023.ipynb
+++ b/task_16_02_2023.ipynb
@@ -36,7 +36,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Sanırım soru biraz hatalı yazılmış . 3 e veya 5 e tam bölünen olsa daha iyi olurdu ."
+   ]
   }
  ],
  "metadata": {
