--- a/task_16_02_2023.ipynb
+++ b/task_16_02_2023.ipynb
@@ -39,6 +39,40 @@
    "source": [
     "Sanırım soru biraz hatalı yazılmış . 3 e veya 5 e tam bölünen olsa daha iyi olurdu ."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 30, 45, 60, 75, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 100\n",
+    "list = []\n",
+    "\n",
+    "# 0 ile 100 arasinda (3 ve 5 e bolunen) 15 e #bolunen ama 7 ye bolunmeyen sayilari bulunuz\n",
+    "\n",
+    "for number in range(0,N):\n",
+    "    if number%15 == 0 and number%7!= 0:\n",
+    "        list.append(number)\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Kullanıcıdan alınan sayının en büyük rakamını bulan bir program yazınız!"
+   ]
   }
  ],
  "metadata": {
