--- a/task_16_02_2023.ipynb
+++ b/task_16_02_2023.ipynb
@@ -73,6 +73,32 @@
    "source": [
     "Kullanıcıdan alınan sayının en büyük rakamını bulan bir program yazınız!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "89\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_1=input(\"Enter a number: \")\n",
+    "num_2=input(\"Enter a number: \")\n",
+    "print(max(num_1 ,num_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
