--- a/task_17_02_2023.ipynb
+++ b/task_17_02_2023.ipynb
@@ -126,6 +126,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8785 saniye; 2 saat 26 dakika 25 saniye eder\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{verilen_saniye} saniye; {saat} saat {dakika} dakika {saniye} saniye eder\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None or 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"None or 1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sanise' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mverilen_saniye\u001b[39m}\u001b[39;00m\u001b[39m saniye; \u001b[39m\u001b[39m{\u001b[39;00msaat\u001b[39m}\u001b[39;00m\u001b[39m saat \u001b[39m\u001b[39m{\u001b[39;00msanise\u001b[39m}\u001b[39;00m\u001b[39m dakika \u001b[39m\u001b[39m{\u001b[39;00msaniye\u001b[39m}\u001b[39;00m\u001b[39m saniye eder\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sanise' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{verilen_saniye} saniye; {saat} saat {sanise} dakika {saniye} saniye eder\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
