--- a/task_17_02_2023.ipynb
+++ b/task_17_02_2023.ipynb
@@ -181,6 +181,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8785 saniye = 2 saat 26 dakika 25 saniye eder\n",
+      "8785 saniye; 2 saat 26 dakika 25 saniye eder\n",
+      "8785 saniye; 2 saat 26 dakika 25 saniye eder\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8785 sn kac saat kac dakika ve kac sn eder?\n",
+    "verilen_saniye = 8785\n",
+    "saat = verilen_saniye // 3600 # 1 saat 60 dk veya 3600 sn dir\n",
+    "dakika = (verilen_saniye % 3600) // 60\n",
+    "saniye = (verilen_saniye % 3600) % 60\n",
+    "print(verilen_saniye, \"saniye =\",saat,\"saat\", dakika, \"dakika\",saniye,\"saniye eder\")\n",
+    "print(f\"{verilen_saniye} saniye; {saat} saat {dakika} dakika {saniye} saniye eder\")\n",
+    "print(\"{} saniye; {} saat {} dakika {} saniye eder\".format(verilen_saniye,saat,dakika,saniye,))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
