--- a/task_17_02_2023.ipynb
+++ b/task_17_02_2023.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -189,6 +189,7 @@
      "output_type": "stream",
      "text": [
       "8785 saniye = 2 saat 26 dakika 25 saniye eder\n",
+      "8785 saniye; 2 saat 26 dakika 25 saniye eder\n",
       "8785 saniye; 2 saat 26 dakika 25 saniye eder\n",
       "8785 saniye; 2 saat 26 dakika 25 saniye eder\n"
      ]
@@ -202,7 +203,155 @@
     "saniye = (verilen_saniye % 3600) % 60\n",
     "print(verilen_saniye, \"saniye =\",saat,\"saat\", dakika, \"dakika\",saniye,\"saniye eder\")\n",
     "print(f\"{verilen_saniye} saniye; {saat} saat {dakika} dakika {saniye} saniye eder\")\n",
-    "print(\"{} saniye; {} saat {} dakika {} saniye eder\".format(verilen_saniye,saat,dakika,saniye,))"
+    "print(\"{} saniye; {} saat {} dakika {} saniye eder\".format(verilen_saniye,saat,dakika,saniye,))\n",
+    "print(\"{} saniye; {} saat {} dakika {} saniye eder\".format(verilen_saniye,saat,dakika,saniye,saat))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## len()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Techpro\"\n",
+    "len(\"Techpro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Meh'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = \"Mehmet\"\n",
+    "\"Mehmet\"[:len(name) // 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'met'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = \"Mehmet\"\n",
+    "\"Mehmet\"[len(name) // 2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'met'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name[len(name) // 2:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str1 = \"sari\"\n",
+    "str2 = \"mehmet\"  # \"samehmetri\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'samehmetri'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ilk_bolum = str1[:(len(str1) // 2)]\n",
+    "son_bolum = str1[(len(str1) // 2):]\n",
+    "sonuc = ilk_bolum + str2 + son_bolum\n",
+    "sonuc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "samehmetri\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = \"sari\"\n",
+    "str2 = \"mehmet\"  # \"samehmetri\"\n",
+    "ilk_bolum = str1[:(len(str1) // 2)]\n",
+    "son_bolum = str1[(len(str1) // 2):]\n",
+    "sonuc = ilk_bolum + str2 + son_bolum\n",
+    "sonuc\n",
+    "print(sonuc)"
    ]
   },
   {
