--- a/task_17_02_2023.ipynb
+++ b/task_17_02_2023.ipynb
@@ -356,6 +356,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tecbesthpro\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1 = \"Techpro\"\n",
+    "str2 = \"best\"\n",
+    "ilk_bolum = str1[:(len(str1) // 2)]\n",
+    "son_bolum = str1[(len(str1) // 2):]\n",
+    "sonuc = ilk_bolum + str2 + son_bolum\n",
+    "print(sonuc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(str1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
