--- a/task_17_02_2023.ipynb
+++ b/task_17_02_2023.ipynb
@@ -398,6 +398,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Techpro\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str1[:(len(str1) // 2):] + str1[(len(str1) // 2):])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Techpro\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str1[:(len(str1) // 2)] + str1[(len(str1) // 2):])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## if - elif - else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5, 4 ten buyuktur\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 5 > 4:\n",
+    "    print(\"5, 4 ten buyuktur\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5, 4 ten buyuktur\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 5 < 4:\n",
+    "    print(\"5, 4 ten kucuktur\")\n",
+    "elif 5 > 4:\n",
+    "    print(\"5, 4 ten buyuktur\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5, 4 ten buyuktur\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 5 > 4:\n",
+    "    print(\"5, 4 ten buyuktur\")\n",
+    "elif 5 > 4:\n",
+    "    print(\"5, 4 ten buyuktur\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
