--- a/task_20_02_2023.ipynb
+++ b/task_20_02_2023.ipynb
@@ -51,6 +51,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 3\n",
+    "y = 2\n",
+    "ara = y\n",
+    "y = x\n",
+    "x = ara\n",
+    "print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
