--- a/task_20_02_2023.ipynb
+++ b/task_20_02_2023.ipynb
@@ -73,6 +73,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10\n",
+    "y = 2\n",
+    "ara_sayi = y \n",
+    "y = x\n",
+    "x = ara_sayi\n",
+    "print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "y = 2\n",
+    "ara_sayi = y \n",
+    "y = x\n",
+    "x = ara_sayi\n",
+    "print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0 5.0\n",
+      "5.0 10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sayi_1 = float(input(\"Bir sayi giriniz: \"))\n",
+    "sayi_2 = float(input(\"Bir sayi giriniz: \"))\n",
+    "print(sayi_1,sayi_2)\n",
+    "ara_sayi = sayi_2\n",
+    "sayi_2 = sayi_1\n",
+    "sayi_1 = ara_sayi\n",
+    "print(sayi_1,sayi_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
