--- a/task_kure.ipynb
+++ b/task_kure.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yaricapi  4 olandairenin alani 50.24 cikar\n"
+     ]
+    }
+   ],
    "source": [
     "r = 4\n",
-    "print(\"yaricapi\")"
+    "pi = 3.14\n",
+    "print(\"yaricapi\",r,\"olandairenin alani\",pi * (r ** 2),\"cikar\")"
    ]
   },
   {
@@ -33,10 +42,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b6f6a7bb10ba9d8da24679aa7c156bc8c77d63457212bc849342bf9244f013b6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
